--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "vite": "^5.4.0"
   },
   "dependencies": {
-    "@google/genai": "^0.2.0"
+    "@google/genai": "^0.2.0",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "jose": "^6.1.3",
+    "mongodb": "^7.0.0"
   }
 }
